# direct-to-video

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindFFmpeg.cmake
demo/include/: dtv.h
demo/src/: main.cpp
include/: dtv.h  encoder.h  ffmpeg.h  frame.h  frame_queue.h
include/dtv/: encoder.h  frame.h  frame_queue.h
src/: encoder.cpp  frame.cpp  frame_queue.cpp  main.cpp
workspace/: line_count_default.txt
